# Consilience

./: .env.example  .gitignore  ARCHITECTURE_DIAGRAM.txt  CHANGELOG.md  CORE_PLAN.md  PROJECT_SUMMARY.md  README.md  SETUP.md  alembic.ini  arhitecture.md  demo_scenario.py  issues.md  main.py  models.py  pyproject.toml  pytest.ini  requirements.txt  updates.md
.github/workflows/: health-checks.yml  migration-check.yml
agents/: base_agent.py  research_planning_agent.py
agents/deepagents/: __init__.py  citation_chainer.py  fact_checker.py  methodology_critic.py
agents/langchain/: __init__.py  planner.py  researcher.py  reviewer.py  synthesizer.py
agents/standard/: detector.py  formatter.py  planner.py  researcher.py  reviewer.py  synthesizer.py  verifier.py
alembic/: env.py
alembic/versions/: 4745fd629317_initial_schema_creation.py
api/: dependencies.py  main.py
api/routes/: __init__.py  auth.py  payments.py  research.py
config/: logging.py  models.py  settings.py
core/: config.py  security.py
database/: connection.py  models.py  schema.py
models/: __init__.py  audit.py  payment.py  research.py  user.py
orchestrator/: audit_logger.py  deep_research.py  langraph_workflow.py  research_orchestrator.py  standard_orchestrator.py  standard_research.py
services/: auth_service.py  cost_service.py  neon_auth_service.py  openrouter_client.py  payment_service.py  research_service.py  user_service.py
storage/: audit_logger.py
tests/: __init__.py  conftest.py  test_auth_complete.py  test_auth_e2e_flow.py  test_auth_routes.py  test_auth_service.py  test_database.py  test_standard_research.py
utils/: cost_estimator.py  retry.py  token_counter.py
